--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,4 +5,25 @@
     bottom: 0;
     width: 72px;
     background: #fff;
+    z-index: 200;
+}
+.sidebar-link{
+    height: 76px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.sidebar-link:hover{
+    background-color: #e6e5e5;
+}
+.sidebar-link img{
+    height: 24px;
+    margin-bottom: 6px;
+}
+.sidebar-link div{
+    font-family: Roboto, Arial;
+    font-size: 12px;
+    margin-left: 4px;
 }
