--- a/styles/general.css
+++ b/styles/general.css
@@ -6,5 +6,7 @@ p{
 body{
     padding-top: 80px;
     margin: 0;
-    padding-left: 80px;
+    padding-left: 96px;
+    padding-right: 26px;
+    background-color: rgb(248, 248, 248);
 }
