--- a/styles/video.css
+++ b/styles/video.css
@@ -4,8 +4,29 @@
     column-gap: 15px;
     row-gap: 40px;
 }
+
+@media (max-width: 750px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 1101px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1100px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    
+}
+
 .thumbnail-row{
     margin-bottom: 10px;
+    position: relative;
 }
 .thumbnail {
     width: 100%;
@@ -43,4 +64,16 @@
     color: rgb(96, 96, 96);
     font-size: 14px;
     font-weight: 400;
+}
+.video-time{
+    font-family: Roboto, Arial;
+    font-size: 16px;
+    font-weight: 500;
+    position: absolute;
+    color:white;
+    background-color: black;
+    bottom: 14px;
+    right: 6px;
+    padding: 4px 4px;
+    border-radius: 4px;
 }
